[package]
name = "smallbitvec"
version = "1.0.0"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT / Apache-2.0"
description = "A bit vector optimized for size and inline storage"
repository = "https://github.com/mbrubeck/smallbitvec"
documentation = "https://docs.rs/smallbitvec"
keywords = ["bitvec", "bitmap", "vec", "data-structures"]
readme = "README.md"

[dependencies]
