[package]
name = "smallbitvec"
version = "2.4.0"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT / Apache-2.0"
description = "A bit vector optimized for size and inline storage"
repository = "https://github.com/servo/smallbitvec"
documentation = "https://docs.rs/smallbitvec"
keywords = ["bitvec", "bitmap", "vec", "data-structures"]
categories = ["data-structures"]
readme = "README.md"


[features]
default = ['std']
std = ["no-std-compat/std"]

[dependencies]
no-std-compat = {version="0.1.0", features=["alloc", ]}


[dev-dependencies]
rand = "0.4.2"
bit-vec = "0.4.4"
