[package]
name = "smallbitvec"
version = "2.5.2"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT OR Apache-2.0"
description = "A bit vector optimized for size and inline storage"
repository = "https://github.com/servo/smallbitvec"
documentation = "https://docs.rs/smallbitvec"
keywords = ["bitvec", "bitmap", "vec", "data-structures"]
categories = ["data-structures"]
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
bit-vec = "0.6.3"
